--- a/demos/app/drop-down/sample.component.html
+++ b/demos/app/drop-down/sample.component.html
@@ -5,3 +5,4 @@
     </igx-drop-down-item>
     <igx-drop-down-item isSelected="true">Selected</igx-drop-down-item>
 </igx-drop-down>
+<div style="position: fixed; width: 100px; height: 100px; background-color: red; top: 50px; left: 300px; z-index: 9000;"></div>
