feat(Radio,Checkbox, Switch): added id property #640

--- a/src/checkbox/checkbox.component.html
+++ b/src/checkbox/checkbox.component.html
@@ -1,6 +1,6 @@
 <input #checkbox class="igx-checkbox__input"
     type="checkbox"
-    [id]="id"
+    [id]="inputId"
     [name]="name"
     [value]="value"
     [tabindex]="tabindex"
@@ -22,7 +22,7 @@
     [igxRippleDisabled]="disableRipple"
     [igxRippleCentered]="true"
     [igxRippleDuration]="100"
-    [attr.for]="id">
+    [attr.for]="inputId">
     <svg class="igx-checkbox__composite-mark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
         <path d="M4.1,12.7 9,17.6 20.3,6.3" />
     </svg>
