--- a/src/radio/radio.component.html
+++ b/src/radio/radio.component.html
@@ -1,5 +1,5 @@
 <input #radio class="igx-radio__input" type="radio"
-    [id]="id"
+    [id]="inputId"
     [name]="name"
     [value]="value"
     [tabindex]="tabindex"
@@ -19,7 +19,7 @@
     [igxRippleDisabled]="disableRipple"
     [igxRippleCentered]="true"
     [igxRippleDuration]="100"
-    [for]="id">
+    [for]="inputId">
     <div class="igx-radio__ripple"></div>
 </label>
 
