feat(grid-search): refactor the activation logic #961

--- a/src/grid/cell.component.html
+++ b/src/grid/cell.component.html
@@ -1,4 +1,4 @@
-<ng-template #defaultCell igxTextHighlight [cssClass]="highlightClass" [activeCssClass]="activeHighlightClass">
+<ng-template #defaultCell igxTextHighlight [cssClass]="highlightClass" [activeCssClass]="activeHighlightClass" [groupName]="gridID">
     {{ formatter ? formatter(value) : value }}
 </ng-template>
 <ng-template #inlineEditor let-cell="cell">
