--- a/src/navigation-drawer/navigation-drawer.component.html
+++ b/src/navigation-drawer/navigation-drawer.component.html
@@ -10,15 +10,15 @@
 <div [hidden]="pin"
     class="igx-nav-drawer__overlay"
     [class.igx-nav-drawer__overlay--hidden]="!isOpen"
-    (click)="close(true)">
+    (click)="close(true)" #overlay>
 </div>
 <aside role="navigation"
     class="igx-nav-drawer__aside"
     [class.igx-nav-drawer__aside--collapsed]="!miniTemplate && !isOpen"
     [class.igx-nav-drawer__aside--mini]="miniTemplate && !isOpen"
     [class.igx-nav-drawer__aside--pinned]="pin"
-    [class.igx-nav-drawer__aside--right]="position == 'right'">
+    [class.igx-nav-drawer__aside--right]="position == 'right'" #aside>
 
     <ng-container *ngTemplateOutlet="template || defaultItemsTemplate"></ng-container>
 </aside>
-<div class="igx-nav-drawer__style-dummy"></div>
+<div class="igx-nav-drawer__style-dummy" #dummy></div>
