--- a/src/grid/row.component.html
+++ b/src/grid/row.component.html
@@ -4,8 +4,8 @@
     </div>
 </ng-container>
 <ng-container *ngIf="pinnedColumns.length > 0">
-    <igx-grid-cell *ngFor="let col of pinnedColumns" [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
+    <igx-grid-cell *ngFor="let col of pinnedColumns" [column]="col" [row]="this" [style.min-width.px]="col.width" [style.flex-basis.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-container>
 <ng-template igxFor let-col [igxForOf]="unpinnedColumns" [igxForScrollContainer]="grid.parentVirtDir" let-colIndex="index" [igxForScrollOrientation]="'horizontal'" [igxForContainerSize]='grid.unpinnedWidth' #igxDirRef>
-    <igx-grid-cell [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
+    <igx-grid-cell [column]="col" [row]="this" [style.min-width.px]="col.width" [style.flex-basis.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-template>
