fix(igxGridFiltering): not possible to interact correctly with calendar
not possible to interact properly with calendar opend through datePicker
located into filteringUI dropdown

Closes #1177 #1183

--- a/src/grid/grid-filtering.component.html
+++ b/src/grid/grid-filtering.component.html
@@ -17,7 +17,7 @@
 <div class="igx-filtering">
     <div [attr.class]="filterCSS">
         <span class="toggle-icon" [igxToggleAction]="directive">
-            <igx-icon>more_vert</igx-icon>
+            <igx-icon (mousedown)="onMouseDown()">more_vert</igx-icon>
         </span>
     </div>
 </div>
