--- a/src/drop-down/drop-down.component.html
+++ b/src/drop-down/drop-down.component.html
@@ -1,4 +1,4 @@
-<div igxToggle (onOpen)="open()" (onClose)="close()" [style.width]="width" [style.height]="height">
+<div class="igx-drop-down" igxToggle (onOpen)="open()" (onClose)="close()" [style.width]="width" [style.height]="height">
     <div *ngIf="!toggle.collapsed">
         <ng-content></ng-content>
     </div>
