chore(igxDropDown): put ngIf in ng-container tag

--- a/src/drop-down/drop-down.component.html
+++ b/src/drop-down/drop-down.component.html
@@ -1,5 +1,5 @@
 <div class="igx-drop-down" igxToggle (onOpen)="open()" (onClose)="close()" [style.width]="width" [style.height]="height">
-    <div *ngIf="!toggle.collapsed">
+    <ng-container *ngIf="!toggle.collapsed">
         <ng-content></ng-content>
-    </div>
+    </ng-container>
 </div>
