--- a/src/grid/grid-filtering.component.html
+++ b/src/grid/grid-filtering.component.html
@@ -11,7 +11,7 @@
 </ng-template>
 
 <ng-template #defaultDateUI>
-    <igx-datePicker *ngIf="!unaryCondition" [(ngModel)]="value"></igx-datePicker>
+    <igx-datePicker (click)="onDatePickerClick()" *ngIf="!unaryCondition" [(ngModel)]="value"></igx-datePicker>
 </ng-template>
 
 <div class="igx-filtering">
