--- a/src/core/styles/components/drop-down/_drop-down-theme.scss
+++ b/src/core/styles/components/drop-down/_drop-down-theme.scss
@@ -3,12 +3,18 @@
 /// @access public
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
-
 /// @param {Color} $background-color [null] - The drop-down background color.
-/// @param {Color} $text-color [null] - The drop-down text color.
+/// @param {Color} $item-text-color [null] - The drop-down text color.
+///
+/// @param {Color} $item-background [null] - The drop-down item background color.
+/// @param {Color} $item-hover-background [null] - The drop-down item hover background color.
+/// @param {Color} $item-hover-text-color [null] - The drop-down item hover text color.
+/// @param {Color} $separator-color [null] - The drop-down separator line color.
+///
 /// @param {Color} $selected-item-background [null] - The drop-down selected item background color.
 /// @param {Color} $focused-item-background [null] - The drop-down focused item background color.
 /// @param {Color} $disabled-item-background [null] - The drop-down disabled item background color.
+///
 /// @param {Color} $selected-item-text-color [null] - The drop-down selected item text color.
 /// @param {Color} $focus-item-text-color [null] - The drop-down focused item text color.
 /// @param {Color} $disabled-item-text-color [null] - The drop-down disabled item text color.
@@ -16,8 +22,9 @@
 /// @requires text-contrast
 @function igx-drop-down-theme(
     $background-color: null,
-    $text-color: null,
+    $item-text-color: null,
     $header-text-color: null,
+    $separator-color: null,
 
     $item-background:null,
     $item-hover-background:null,
@@ -31,26 +38,51 @@
     $disabled-item-text-color:null
 ) {
 
-    @if not($text-color) and $background-color {
-        $text-color: text-contrast($background-color);
+    // ITEM BACKGROUND
+    @if not($background-color) and $item-background {
+        $background-color: $item-background;
     }
 
-    @if not($text-color) and $background-color and $item-background {
-        $text-color: text-contrast($background-color);
+    @if not($item-background) and $background-color {
+        $item-background: $background-color;
+    }
+
+    // ITEM TEXT
+    @if not($item-text-color) and $item-background {
+        $item-text-color: text-contrast($item-background);
+    }
+
+    @if not($item-text-color) and $background-color and $item-background {
+        $item-text-color: text-contrast($item-background);
+    }
+
+    // DISABLED ITEM
+    //@if not($disabled-item-text-color) and $item-background {
+    //    $item-text-color: rgba(text-contrast($item-background), .4);
+    //}
+    //@if not($disabled-item-text-color) and $background-color and $item-background {
+    //    $item-text-color: rgba(text-contrast($item-background), .4);
+    //}
+
+    // FOCUSED & SELECTED ITEMS
+    @if not($focus-item-text-color) and $focused-item-background {
+        $focus-item-text-color: text-contrast($focused-item-background);
+    }
+
+    @if not($selected-item-text-color) and $selected-item-background {
+        $selected-item-text-color: text-contrast($selected-item-background);
     }
 
     @return (
         background-color: $background-color,
-        text-color: $text-color,
+        item-text-color: $item-text-color,
         header-text-color: $header-text-color,
-
+        separator-color:$separator-color,
         item-background:$item-background,
         item-hover-background:$item-hover-background,
-
         selected-item-background:$selected-item-background,
         focused-item-background:$focused-item-background,
         disabled-item-background:$disabled-item-background,
-
         selected-item-text-color:$selected-item-text-color,
         focus-item-text-color:$focus-item-text-color,
         disabled-item-text-color:$disabled-item-text-color
@@ -67,24 +99,22 @@
 @mixin igx-drop-down($theme, $palette: $default-palette) {
     $default-theme: igx-drop-down-theme(
         $background-color: #fff,
-        $text-color: igx-color($palette, 'grays', 800),
+        $item-text-color: igx-color($palette, 'grays', 800),
         $header-text-color: igx-color($palette, 'primary', 500),
-
+        $separator-color: igx-color($palette, 'grays', 300),
         $item-background: #fff,
         $item-hover-background: igx-color($palette, 'grays', 100),
-
         $selected-item-background: igx-color($palette, 'primary', 500),
         $focused-item-background: igx-color($palette, 'primary', 500),
-        $disabled-item-background: #fff,
-
+        $disabled-item-background: transparent,
         $selected-item-text-color: #fff,
         $focus-item-text-color: #fff,
-        $disabled-item-text-color: igx-color($palette, 'grays', 300)
+        $disabled-item-text-color: igx-color($palette, 'grays', 400)
     );
 
     $this: extend($default-theme, $theme);
 
-    $dd-shadow: igx-elevation($elevations, 2);
+    $dd-shadow: igx-elevation($elevations, 3);
 
     %igx-drop-down {
         display: flex;
@@ -97,26 +127,24 @@
         background: map-get($this, 'background-color');
     }
 
-    %igx-drop-down__header {
-        font-weight: 800;
-        font-size: rem(14px);
-        color: map-get($this, 'header-text-color');
-    }
-
     %igx-drop-down__item {
-        display: flex;
         justify-content: flex-start;
         align-items: center;
-        min-height: rem(32px);
-        padding: rem(8px) rem(24px);
         background: map-get($this, 'item-background');
-        line-height: rem(20px);
+        color: map-get($this, 'item-text-color');
         cursor: pointer;
         user-select: none;
 
         &:hover {
             background: map-get($this, 'item-hover-background');
         }
+    }
+
+    %igx-drop-down__header,
+    %igx-drop-down__item {
+        display: block;
+        line-height: rem(20px);
+        padding: rem(8px) rem(24px);
     }
 
     %igx-drop-down__item--selected {
@@ -138,15 +166,30 @@
     }
 
     %igx-drop-down__item--disabled {
-        background: map-get($this, 'disabled-item-background');
-        color: map-get($this, 'disabled-item-text-color');
+        background: map-get($this, 'disabled-item-background') !important;
+        color: map-get($this, 'disabled-item-text-color') !important;
         cursor: default;
 
         &:hover {
             background: map-get($this, 'disabled-item-background');
         }
     }
+
+    %igx-drop-down__header {
+        font-weight: 800;
+        font-size: rem(14px);
+        color: map-get($this, 'header-text-color');
+        padding: rem(8px) rem(24px);
+    }
+
+    %igx-drop-down__separator {
+        position: relative;
+        padding-bottom: 7px;
+        border-top: 1px solid map-get($this, 'separator-color');
+        margin-top: 8px;
+    }
 }
+
 
 
 
