--- a/src/grid/cell.component.html
+++ b/src/grid/cell.component.html
@@ -1,5 +1,5 @@
-<ng-template #defaultCell igxTextHighlight [cssClass]="highlightClass" [activeCssClass]="activeHighlightClass" [groupName]="gridID">
-    {{ formatter ? formatter(value) : value }}
+<ng-template #defaultCell igxTextHighlight [cssClass]="highlightClass" [activeCssClass]="activeHighlightClass" [groupName]="gridID" [value]="value">
+    <div id="cellContent">{{ formatter ? formatter(value) : value }}</div>
 </ng-template>
 <ng-template #inlineEditor let-cell="cell">
     <igx-input-group>
