feat(gridseach): refactor the activation logic #961

--- a/src/grid/cell.component.html
+++ b/src/grid/cell.component.html
@@ -1,5 +1,6 @@
-<ng-template #defaultCell igxTextHighlight [cssClass]="highlightClass" [activeCssClass]="activeHighlightClass" [groupName]="gridID" [value]="value">
-    <div id="cellContent">{{ formatter ? formatter(value) : value }}</div>
+<ng-template #defaultCell igxTextHighlight [cssClass]="highlightClass" [activeCssClass]="activeHighlightClass" [groupName]="gridID"
+        [value]="formatter ? formatter(value) : value" [row]="rowIndex" [column]="columnIndex">
+    <div id="content">{{ formatter ? formatter(value) : value }}</div>
 </ng-template>
 <ng-template #inlineEditor let-cell="cell">
     <igx-input-group>
