--- a/src/dialog/dialog-content.component.html
+++ b/src/dialog/dialog-content.component.html
@@ -1,22 +1,31 @@
 <div #dialog class="igx-dialog" *ngIf="isOpen" [@fadeInOut]="state" (click)="onDialogSelected($event)">
     <div #dialogWindow class="igx-dialog__window" [@slideIn]="state" [attr.role]="role" [attr.aria-labelledby]="titleId">
-        <div *ngIf="title" [attr.id]="titleId" class="igx-dialog__window-title">
-            {{ title }}
-        </div>
+
+        <ng-template #defaultTitle>
+            <div *ngIf="title" [attr.id]="titleId" class="igx-dialog__window-title">
+                {{ title }}
+            </div>
+        </ng-template>
+        <ng-container *ngTemplateOutlet="titleTemplate ? titleTemplate : defaultTitle; context: { $implicit: this }">
+        </ng-container>
 
         <div class="igx-dialog__window-content" *ngIf="message">{{ message }}</div>
         <ng-content *ngIf="!message"></ng-content>
 
-        <div *ngIf="leftButtonLabel || rightButtonLabel" class="igx-dialog__window-actions">
-            <button *ngIf="leftButtonLabel" igxButton="{{ leftButtonType }}" igxButtonColor="{{ leftButtonColor }}" igxButtonBackground="{{ leftButtonBackgroundColor }}"
-                igxRipple="{{ leftButtonRipple }}" (click)="onInternalLeftButtonSelect($event)">
-                {{ leftButtonLabel }}
-            </button>
-            <button *ngIf="rightButtonLabel" igxButton="{{ rightButtonType }}" igxButtonColor="{{ rightButtonColor }}" igxButtonBackground="{{ rightButtonBackgroundColor }}"
-                igxRipple="{{ rightButtonRipple }}" (click)="onInternalRightButtonSelect($event)">
-                {{ rightButtonLabel }}
-            </button>
-        </div>
+        <ng-template #defaultButtons>
+            <div *ngIf="leftButtonLabel || rightButtonLabel" class="igx-dialog__window-actions">
+                <button *ngIf="leftButtonLabel" igxButton="{{ leftButtonType }}" igxButtonColor="{{ leftButtonColor }}" igxButtonBackground="{{ leftButtonBackgroundColor }}"
+                    igxRipple="{{ leftButtonRipple }}" (click)="onInternalLeftButtonSelect($event)">
+                    {{ leftButtonLabel }}
+                </button>
+                <button *ngIf="rightButtonLabel" igxButton="{{ rightButtonType }}" igxButtonColor="{{ rightButtonColor }}" igxButtonBackground="{{ rightButtonBackgroundColor }}"
+                    igxRipple="{{ rightButtonRipple }}" (click)="onInternalRightButtonSelect($event)">
+                    {{ rightButtonLabel }}
+                </button>
+            </div>
+        </ng-template>
+        <ng-container *ngTemplateOutlet="buttonsTemplate ? buttonsTemplate : defaultButtons; context: { $implicit: this }">
+        </ng-container>
 
     </div>
 </div>
