--- a/src/grid/grid-filtering.component.html
+++ b/src/grid/grid-filtering.component.html
@@ -1,9 +1,6 @@
 <ng-template #defaultFilterUI>
     <div *ngIf="!unaryCondition" class="igx-filtering__op">
         <igx-input-group>
-            <igx-prefix>
-                <igx-icon>filter_list</igx-icon>
-            </igx-prefix>
             <input type="text" igxInput placeholder="Value" autocomplete="off" [value]="value" (input)="onInputChanged($event.target.value)" />
         </igx-input-group>
     </div>
@@ -17,7 +14,7 @@
 <div class="igx-filtering">
     <div [attr.class]="filterCSS">
         <span class="toggle-icon" [igxToggleAction]="directive">
-            <igx-icon>more_vert</igx-icon>
+            <igx-icon (mousedown)="onMouseDown()">filter_list</igx-icon>
         </span>
     </div>
 </div>
@@ -30,7 +27,7 @@
     </div>
     <ng-container *ngTemplateOutlet="template; context: { $implicit: this }"></ng-container>
     <div class="igx-filtering__options-bgroup">
-        <button igxButton igxRipple (click)="clearFiltering()">Reset</button>
-        <button igxButton igxRipple (click)="filter()" [disabled]="disabled">Filter</button>
+        <button igxButton igxRipple (click)="clearFiltering()" [disabled]="disabled">Reset</button>
+        <button igxButton igxRipple (click)="directive.close(true)">Close</button>
     </div>
 </span>
