refactor(igxgrid): change class name to comply with naming convention

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -74,5 +74,5 @@
 </div>
 
 <ng-template #emptyGrid>
-    <p class="igx-grid__empty">No records found.</p>
+    <p class="igx-grid--empty">No records found.</p>
 </ng-template>
