--- a/src/drop-down/drop-down.component.html
+++ b/src/drop-down/drop-down.component.html
@@ -1,4 +1,4 @@
-<div class="igx-drop-down" igxToggle (onOpening)="onToggleOpening()" (onOpened)="onToggleOpen()" (onClosed)="onToggleClose()" [style.width]="width" [style.height]="height">
+<div class="igx-drop-down" igxToggle (onOpening)="onToggleOpening()" (onOpened)="onToggleOpen()" (onClosed)="onToggleClose()">
     <ng-container *ngIf="!toggleDirective.collapsed">
         <ng-content></ng-content>
     </ng-container>
