--- a/src/grid/grid-filtering.component.html
+++ b/src/grid/grid-filtering.component.html
@@ -1,7 +1,10 @@
 <ng-template #defaultFilterUI>
     <div *ngIf="!unaryCondition" class="igx-filtering__op">
         <igx-input-group>
-            <input type="text" igxInput placeholder="Value" autocomplete="off" [value]="value" (input)="onInputChanged($event.target.value)" />
+            <input type="text" igxInput placeholder="Value" autocomplete="off" [value]="value" (input)="onInputChanged($event.target.value)" #input/>
+            <igx-suffix *ngIf="input.value.length > 0" (click)="clearInput()">
+                <igx-icon>clear</igx-icon>
+            </igx-suffix>
         </igx-input-group>
     </div>
     <br>
@@ -27,7 +30,7 @@
     </div>
     <ng-container *ngTemplateOutlet="template; context: { $implicit: this }"></ng-container>
     <div class="igx-filtering__options-bgroup">
-        <button igxButton igxRipple (click)="clearFiltering()" [disabled]="disabled">Reset</button>
+        <button igxButton igxRipple (click)="clearFiltering(true)" [disabled]="disabled">Reset</button>
         <button igxButton igxRipple (click)="directive.close(true)">Close</button>
     </div>
 </span>
